# object-oriented-programming-lab7

./: CMakeLists.txt  Game.cpp  README.md  main.cpp  test_npc.cpp
include/: Game.h  NPC.h  NPCFactory.h  Observer.h
src/: NPC.cpp  NPCFactory.cpp  Observer.cpp
